veritically align center text correctly

--- a/css/static.css
+++ b/css/static.css
@@ -238,6 +238,8 @@ p {
 
 .what-is-col {
     text-align: center;
+	display: flex;
+	align-items: center;
 
 }
 .what-is-col-text {
